src/style/style.css
@font-face {
    font-family: "Shadow";
    font-display: swap;
	src: url("/static/shadow-font/Shadow-Regular.eot");
	src: url("/static/shadow-font/Shadow-Regular.woff") format("woff"),
	url("/static/shadow-font/Shadow-Regular.otf") format("opentype"),
	url("/static/shadow-font/Shadow-Regular.svg") format("svg");
}

:root {
    /* FONTS */
    --title-font: Shadow, Georgia, serif;
    --text-font: 'Roboto', Helvetica, sans-serif;

    /* FONTS */
    --font-size-default: 14pt;
    --font-size-accent: 24pt;
    --font-size-second: 12pt;

    --font-size-h1: 5rem;
    --font-size-h2: 3rem;
    --font-size-h3: 1.5rem;

    /* COLOR */
    --color-text: hsl(0, 0%, 15%);
    --color-text-second: hsl(240, 10%, 60%);
    --color-text-opposite: hsl(0, 0%, 95%);

    --color-link: hsl(0, 0%, 85%);
    --color-link-opposite: hsl(0, 0%, 35%);

    --color-back-main: white;
    --color-back: white;
    --color-back-opposite: hsl(0, 0%, 15%);

    --color-shadow: rgba(27, 51, 88, 0.25);
    --color-hover: none;

    /* SIZE */
    --size-xs: 0.35rem;
    --size-s: 0.75rem;
    --size-m: 1.25rem;
    --size-l: 3rem;
    --size-xl: 5rem;

    /* EFFECTS */
    --radius: 16px;
    --radius-small: 12px;
    --shadow:
        0 2px 4px rgba(27, 51, 88, 0.2),
        0 4px 8px -8px rgba(0, 0, 0, 0.2),
        0 8px 16px -8px rgba(0, 0, 0, 0.3);
    --shadow-active:
        0 12px 24px -8px rgba(27, 51, 88, 0.25),
        0 8px 16px -8px rgba(0, 0, 0, 0.3);
    --border: none;

    /* SPECIAL */
    --article-line-height: 1.5em;
    --embed-video-ratio: 56.25%;

    /* CONTENT */
    --content-width: 75%;
    --content-margin: 0;

    --text-max-width: 800px;

    /* KAZIMIR */
    --kazimir-caption-margin: 0px;
    --picture-wide-increase: 100px;
}

* {
    margin: 0;
    padding: 0;
}

html,
body {
    height: 100%;
}

body {
    min-width: 320px;

    color: var(--color-text);
    background-color: var(--color-back-main);

    font-family: var(--text-font);
}

/* TITLE */
h1 {
    font-family: var(--title-font);
    text-align: center;
    font-size: var(--font-size-h1);

    hyphens: none;
}

h2 {
    font-family: var(--title-font);
    margin: var(--size-m) 0;
    font-size: var(--font-size-h2);

    hyphens: none;
}

h3 {
    margin-bottom: var(--size-s);
    font-size: var(--font-size-h3);

    hyphens: none;
}

/* a.invisible {
    border-bottom: none;
} */

.opposite a {
    color: var(--color-text-opposite);
    border-bottom-color: var(--color-link-opposite);
}

.opposite a:hover {
    border-bottom-color: var(--color-text-opposite);
}


/* RC TOOLTIP OVERRIDE */
.hudozka.rc-tooltip {
    position: absolute;
    background-color: initial;
    padding: 0;
    opacity: 1;
}
.hudozka.rc-tooltip-placement-left .rc-tooltip-arrow {
    border-left-color: var(--color-back-opposite);
}
.hudozka.rc-tooltip-placement-right .rc-tooltip-arrow {
    border-right-color: var(--color-back-opposite);
}
.hudozka.rc-tooltip-placement-top .rc-tooltip-arrow {
    border-top-color: var(--color-back-opposite);
}
.hudozka.rc-tooltip-placement-bottom .rc-tooltip-arrow {
    border-bottom-color: var(--color-back-opposite);
}
.hudozka .rc-tooltip-inner {
  padding: var(--size-m);
  color: var(--color-text-opposite);
  text-align: left;
  text-decoration: none;
  background-color: var(--color-back-opposite);
  border-radius: var(--radius);
  min-height: 34px;
  border: none;
  box-shadow: var(--shadow);
}

/* MOBILE */
@media (max-width: 31.25em) {
    :root {
        --font-size-default: 14pt;
        --font-size-accent: 16pt;
        --font-size-h1: 1.5rem;
        --font-size-h2: 1.5rem;
        --font-size-h3: 1.25rem;

        --content-width: 100%;
        --content-margin: var(--size-m);
        --content-wide-margin: var(--size-m) var(--size-m);

        --picture-wide-increase: 0px;
    }
}

/* DARK THEME */
@media (prefers-color-scheme: dark) {
    :root {
        /* TEXT COLOR */
        --color-text: hsl(240, 10%, 80%);
        --color-text-second: hsl(240, 10%, 60%);
        --color-text-opposite: hsl(240, 10%, 15%);

        --color-back-main: hsl(240, 10%, 10%);
        --color-back: hsl(240, 10%, 15%);
        --color-back-active: hsl(240, 10%, 20%);
        --color-back-opposite: hsl(240, 10%, 80%);
        --color-link: hsl(240, 10%, 40%);
        --color-link-opposite: hsl(240, 10%, 60%);

        --shadow: none;
        --shadow-active: none;
    }
}

/* CONTRAST THEME */
.theme-contrast {
    /* FONTS */
    --title-font: 'Roboto', Helvetica, sans-serif;
    --text-font: 'Roboto', Helvetica, sans-serif;

    /* TEXT COLOR */
    --color-text: black;
    --color-text-second: black;
    --color-text-opposite: white;

    --color-back-main: white;
    --color-back: white;
    --color-back-active: hsl(240, 10%, 20%);
    /* --color-back-opposite: hsl(240, 10%, 80%); */
    --color-back-opposite: black;
    --color-link: hsl(240, 10%, 40%);
    --color-link-opposite: hsl(240, 10%, 60%);

    --color-hover: white;
    --color-hover-back: black;

    /* EFFECTS */
    /* --radius: 0px; */
    --shadow: none;
    --shadow-active: none;

    /* FONTS */
    --font-size-default: 16pt;
    --font-size-accent: 24pt;
    --font-size-second: 14pt;

    --font-size-h1: 5rem;
    --font-size-h2: 3rem;
    --font-size-h3: 1.5rem;

    /* OTHER */
    --radius: 0;
    --radius-small: 0;
    --border: 5px solid var(--color-back-opposite);
}

/* CONTRAST + DARK THEME */
@media (prefers-color-scheme: dark) {
    .theme-contrast {
        /* TEXT COLOR */
        --color-text: white;
        --color-text-second: white;
        --color-text-opposite: black;

        --color-back-main: black;
        --color-back: black;
        --color-back-opposite: white;

        /* --color-back-active: hsl(240, 10%, 20%); */
        /* --color-link: hsl(240, 10%, 40%); */
        /* --color-link-opposite: hsl(240, 10%, 60%); */

        --color-hover: white;
        --color-hover-back: white;
    }
}

